--- a/res/layout/outcome.xml
+++ b/res/layout/outcome.xml
@@ -11,27 +11,30 @@
         android:orientation="vertical" >
 
         <TableLayout
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent" >
-		    <TableRow
-                android:id="@+id/tableRow1"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" >
-            <TextView
-                android:id="@+id/textView11"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Handling on Departure"
-                android:textAppearance="?android:attr/textAppearanceMedium"
-                android:textColor="#ffffff"
-                android:textSize="32dp"
-                android:textStyle="bold"
-                android:typeface="normal" />
-           </TableRow>
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" >
 
             <TableRow
                 android:id="@+id/tableRow1"
                 android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="#000000" >
+
+                <TextView
+                    android:id="@+id/textView11"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Handling on Departure"
+                    android:textAppearance="?android:attr/textAppearanceMedium"
+                    android:textColor="#ffffff"
+                    android:textSize="32dp"
+                    android:textStyle="bold"
+                    android:typeface="normal" />
+            </TableRow>
+
+            <TableRow
+                android:id="@+id/tableRow1"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content" >
 
                 <CheckBox
@@ -45,7 +48,6 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Walking Aided" />
-
             </TableRow>
 
             <TableRow
@@ -64,7 +66,6 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Long Board" />
-
             </TableRow>
 
             <TableRow
@@ -83,7 +84,6 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Orthopaedic Stretcher" />
-
             </TableRow>
 
             <TableRow
@@ -103,132 +103,134 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:ems="10" />
-
             </TableRow>
         </TableLayout>
 
-        <TextView
-            android:id="@+id/textView2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Transport"
-            android:textAppearance="?android:attr/textAppearanceMedium" />
-
         <TableLayout
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent" >
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" >
 
             <TableRow
                 android:id="@+id/tableRow5"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content" >
+                android:layout_height="wrap_content"
+                android:background="#000000" >
 
+                <TextView
+                    android:id="@+id/textView11"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Transport"
+                    android:textAppearance="?android:attr/textAppearanceMedium"
+                    android:textColor="#ffffff"
+                    android:textSize="32dp"
+                    android:textStyle="bold"
+                    android:typeface="normal" />
             </TableRow>
 
             <TableRow
                 android:id="@+id/tableRow6"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" >
-            </TableRow>
 
-            <TableRow
-                android:id="@+id/tableRow7"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" >
-            </TableRow>
+                <CheckBox
+                    android:id="@+id/checkBox7"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Own Transport" />
 
-            <TableRow
-                android:id="@+id/tableRow8"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" >
-            </TableRow>
+                <CheckBox
+                    android:id="@+id/checkBox8"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Public Transport" />
 
+                <CheckBox
+                    android:id="@+id/checkBox9"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="NHS Ambulance" />
+            </TableRow>
         </TableLayout>
 
-        <TextView
-            android:id="@+id/textView3"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Outcome"
-            android:textAppearance="?android:attr/textAppearanceMedium" />
-
         <TableLayout
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent" >
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" >
 
             <TableRow
                 android:id="@+id/tableRow9"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content" >
+                android:layout_height="wrap_content"
+                android:background="#000000" >
+
+                <TextView
+                    android:id="@+id/textView11"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Outcome"
+                    android:textAppearance="?android:attr/textAppearanceMedium"
+                    android:textColor="#ffffff"
+                    android:textSize="32dp"
+                    android:textStyle="bold"
+                    android:typeface="normal" />
             </TableRow>
 
             <TableRow
                 android:id="@+id/tableRow10"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" >
+
+                <CheckBox
+                    android:id="@+id/checkBox10"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Treatment Completed" />
+
+                <CheckBox
+                    android:id="@+id/checkBox11"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Advised to Seek further medical treatment" />
             </TableRow>
 
             <TableRow
                 android:id="@+id/tableRow11"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" >
+
+                <CheckBox
+                    android:id="@+id/checkBox12"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Hospital" />
+
+                <CheckBox
+                    android:id="@+id/checkBox13"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Review Later" />
+
             </TableRow>
 
             <TableRow
                 android:id="@+id/tableRow12"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" >
+
+                <TextView
+                    android:id="@+id/textView1"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Time left first aid"
+                    android:textAppearance="?android:attr/textAppearanceMedium" />
+
+                <TimePicker
+                    android:id="@+id/timePicker1"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" />
             </TableRow>
 
-         
         </TableLayout>
-        
-           <TextView
-                android:id="@+id/textView4"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Treated by"
-                android:textAppearance="?android:attr/textAppearanceMedium" />
-
-           <TableLayout
-               android:layout_width="match_parent"
-               android:layout_height="wrap_content" >
-
-               <TableRow
-                   android:id="@+id/tableRow13"
-                   android:layout_width="wrap_content"
-                   android:layout_height="wrap_content" >
-
-                   <TextView
-                       android:id="@+id/textView5"
-                       android:layout_width="wrap_content"
-                       android:layout_height="wrap_content"
-                       android:text="Print name"
-                       android:textAppearance="?android:attr/textAppearanceMedium" />
-
-                   <EditText
-                       android:id="@+id/editText1"
-                       android:layout_width="wrap_content"
-                       android:layout_height="wrap_content"
-                       android:ems="10"
-                       android:inputType="textPersonName" >
-
-                       <requestFocus />
-                   </EditText>
-
-               </TableRow>
-
-               <TableRow
-                   android:id="@+id/tableRow14"
-                   android:layout_width="wrap_content"
-                   android:layout_height="wrap_content" >
-               </TableRow>
-           </TableLayout>
-
-           <uk.co.section9.emfmedical.DrawingView
-               android:id="@+id/drawingView1"
-               android:layout_width="375dp"
-               android:layout_height="256dp" />
 
     </LinearLayout>
 
