--- a/res/layout/secondary_survey.xml
+++ b/res/layout/secondary_survey.xml
@@ -1,8 +1,272 @@
-<?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<?xml version="1.0" encoding="utf-8"?><ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical" >
-    
 
-</LinearLayout>
+  
+
+    <TableLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" >
+
+        <TableRow
+            android:id="@+id/tableRow1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="#000000" >
+
+              <TextView
+                  android:id="@+id/textView11"
+                  android:layout_width="wrap_content"
+                  android:layout_height="wrap_content"
+                  android:text="Head and Face"
+                  android:textAppearance="?android:attr/textAppearanceMedium"
+                  android:textColor="#ffffff"
+                  android:textSize="32dp"
+                  android:textStyle="bold"
+                  android:typeface="normal" />
+
+        </TableRow>
+
+        <TableRow
+            android:id="@+id/tableRow4"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" >
+
+            <EditText
+                android:id="@+id/editText1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:ems="10"
+                     android:lines="5"
+                android:inputType="textMultiLine" >
+				
+                <requestFocus />
+            </EditText>
+
+        </TableRow>
+
+        <TableRow
+            android:id="@+id/tableRow2"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" >
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" >
+
+                <TableLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" >
+
+                    <TableRow
+                        android:id="@+id/TableRow02"
+                        android:layout_width="wrap_content"
+                        android:background="#000000"
+                        android:layout_height="wrap_content" >
+
+                         <TextView
+                             android:id="@+id/textView11"
+                             android:layout_width="wrap_content"
+                             android:layout_height="wrap_content"
+                             android:maxWidth="200dp"
+                             android:text="Right Arm and Hand"
+                             android:textAppearance="?android:attr/textAppearanceMedium"
+                             android:textColor="#ffffff"
+                             android:textSize="32dp"
+                             android:textStyle="bold"
+                             android:typeface="normal" />
+
+                    </TableRow>
+
+                    <TableRow
+                        android:id="@+id/TableRow01"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content" >
+
+                        <EditText
+                            android:id="@+id/editText2"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                                 android:lines="5"
+                            android:inputType="textMultiLine" />
+
+                    </TableRow>
+                </TableLayout>
+
+                <TableLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent" >
+
+                    <TableRow
+                        android:id="@+id/tableRow5"
+                        android:layout_width="wrap_content"
+                        android:background="#000000"
+                        android:layout_height="wrap_content" >
+
+                          <TextView
+                              android:id="@+id/textView11"
+                              android:layout_width="wrap_content"
+                              android:layout_height="wrap_content"
+                              android:maxWidth="200dp"
+                              android:text="Torso Front and Back"
+                              android:textAppearance="?android:attr/textAppearanceMedium"
+                              android:textColor="#ffffff"
+                              android:textSize="32dp"
+                              android:textStyle="bold"
+                              android:typeface="normal" />
+
+                    </TableRow>
+
+                    <TableRow
+                        android:id="@+id/tableRow6"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content" >
+
+                        <EditText
+                            android:id="@+id/editText3"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                                 android:lines="5"
+                            android:inputType="textMultiLine" />
+
+                    </TableRow>
+                </TableLayout>
+
+                <TableLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" >
+
+                    <TableRow
+                        android:id="@+id/tableRow7"
+                        android:layout_width="wrap_content"
+                        android:background="#000000"
+                        android:layout_height="wrap_content" >
+
+                        <TextView
+                            android:id="@+id/textView11"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:maxWidth="200dp"
+                            android:text="Left Arm and Hand"
+                            android:textAppearance="?android:attr/textAppearanceMedium"
+                            android:textColor="#ffffff"
+                            android:textSize="32dp"
+                            android:textStyle="bold"
+                            android:typeface="normal" />
+
+                    </TableRow>
+
+                    <TableRow
+                        android:id="@+id/tableRow8"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content" >
+
+                        <EditText
+                            android:id="@+id/editText4"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                                 android:lines="5"
+                            android:inputType="textMultiLine" />
+
+                    </TableRow>
+                </TableLayout>
+
+            </LinearLayout>
+
+        </TableRow>
+
+        <TableRow
+            android:id="@+id/tableRow3"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" >
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" >
+
+                <TableLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent" >
+
+                    <TableRow
+                        android:id="@+id/tableRow9"
+                        android:layout_width="wrap_content"
+                        android:background="#000000"
+                        android:layout_height="wrap_content" >
+
+                       <TextView
+                           android:id="@+id/textView11"
+                           android:layout_width="wrap_content"
+                           android:layout_height="wrap_content"
+                           android:maxWidth="300dp"
+                           android:text="Right Leg and Right Foot"
+                           android:textAppearance="?android:attr/textAppearanceMedium"
+                           android:textColor="#ffffff"
+                           android:textSize="32dp"
+                           android:textStyle="bold"
+                           android:typeface="normal" />
+
+                    </TableRow>
+
+                    <TableRow
+                        android:id="@+id/tableRow10"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content" >
+
+                        <EditText
+                            android:id="@+id/editText6"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                                 android:lines="5"
+                            android:inputType="textMultiLine" />
+
+                    </TableRow>
+                </TableLayout>
+
+                <TableLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent" >
+
+                    <TableRow
+                        android:id="@+id/TableRow04"
+                        android:layout_width="wrap_content"
+                        android:background="#000000"
+                        android:layout_height="wrap_content" >
+
+                       <TextView
+                           android:id="@+id/textView11"
+                           android:layout_width="wrap_content"
+                           android:layout_height="wrap_content"
+                           android:maxWidth="300dp"
+                           android:text="Left Leg and Left Foot"
+                           android:textAppearance="?android:attr/textAppearanceMedium"
+                           android:textColor="#ffffff"
+                           android:textSize="32dp"
+                           android:textStyle="bold"
+                           android:typeface="normal" />
+
+                    </TableRow>
+
+                    <TableRow
+                        android:id="@+id/TableRow03"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content" >
+
+                        <EditText
+                            android:id="@+id/editText5"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                                 android:lines="5"
+                            android:inputType="textMultiLine" />
+
+                    </TableRow>
+                </TableLayout>
+
+            </LinearLayout>
+
+        </TableRow>
+
+    </TableLayout>
+
+</ScrollView>
